Fix: fix z-index problem of Dropdown

--- a/components/atoms/text-editor/TextEditor.module.scss
+++ b/components/atoms/text-editor/TextEditor.module.scss
@@ -10,8 +10,6 @@
     }
 
     .ql-container {
-      position: relative;
-      z-index: -1;
       border-top: 1px solid $gray-06;
       border-right: none;
       border-bottom: none;
